--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- header -->
     <header class="header">
         <h1>Brenda Rodriguez
+
+            <img src="./assests/images/itme.JPG" alt="selfie of myself" 
+                width="150"
+                height="250" />
             
         </h1>
 
@@ -43,7 +47,7 @@
 
             <h2>about me</h2>
             <p>
-                Registered nurse with three years experince working in a fast paced medical surgical floor. Excellent attention to detail with the ability to communicate effectively over the telephone or in written correspondence. Flexible fast learner who adapts quickly to challenges and consistently produces quality results while working independtly or in a team setting. Strong customer service skills with attention and awareness to sensitive issues. Computer skills include Microsoft Office (Word, Excel, Powerpoint, and Outlook), Internet research, E-Charting applications, and in the progress of a web development certificate at UTSA.  
+                Registered nurse with three years experince working in a fast paced medical surgical floor. Excellent attention to detail with the ability to communicate effectively over the telephone or in written correspondence. Flexible fast learner who adapts quickly to challenges and consistently produces quality results while working independtly or in a team setting. Strong customer service skills with attention and awareness to sensitive issues. Computer skills include Microsoft Office (Word, Excel, Powerpoint, and Outlook), Internet research, E-Charting applications, and in the process of a web development certificate at UTSA.  
             </p>
 
         </main>
@@ -53,11 +57,65 @@
 
             <h2>work</h2>
 
+            <section>
 
+                <h3>run buddy</h3>
+
+                <img src="./assests/images/runbuddy.jpeg" alt="screenshot of run buddy"
+                    width="100"
+                    height="150" />
+
+            </section>
+
+            <section>
+
+                <h3>horiseon</h3>
+
+                <img src="./assests/images/challenege 1 finish product.png" alt="horiseon product application"
+                    width="100"
+                    height="150" />
+
+            </section>
+
+            <section>
+
+                <h3>coming soon 1</h3>
+
+                <img src="./assests/images/dogburger.jpeg" alt="dog on top a burger"
+                    width="100" />
+
+            </section>
+
+            <section>
+
+                <h3>coming soon 2</h3>
+
+                <img src="./assests/images/dogskates.jpeg" alt="dog in skates"
+                width="100" />
+
+            </section>
+
+            <section>
+
+                <h3>coming soon 3</h3>
+
+                <img src="./assests/images/heyboo.jpeg" alt="dog saying hey boo"
+                    width="100" />
+
+            </section>
+
+            <section>
+                
+                <h3>coming soon 4</h3>
+
+                <img src="./assests/images/sweatydog.jpeg" alt="dog working out"
+                    width="100" />
+
+            </section>
 
         </main>
 
-        <!-- contact me -->
+        <!-- contact me with fake # & email -->
         <main>
             <h2>contact me</h2>
 
