color added to css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stlesheet" href="./assests/CSS/style.css">
+    <link rel="stylesheet" href="./assests/CSS/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brenda's Portfolio</title>
@@ -42,10 +42,12 @@
             </ul>
         </nav>
 
+    </header>    
+
         <!-- about me section -->
         <main>
 
-            <h2>about me</h2>
+            <h2 class="about-me">about me</h2>
             <p>
                 Registered nurse with three years experince working in a fast paced medical surgical floor. Excellent attention to detail with the ability to communicate effectively over the telephone or in written correspondence. Flexible fast learner who adapts quickly to challenges and consistently produces quality results while working independtly or in a team setting. Strong customer service skills with attention and awareness to sensitive issues. Computer skills include Microsoft Office (Word, Excel, Powerpoint, and Outlook), Internet research, E-Charting applications, and in the process of a web development certificate at UTSA.  
             </p>
@@ -55,7 +57,7 @@
         <!-- work section -->
         <main>
 
-            <h2>work</h2>
+            <h2 class="work">work</h2>
 
             <section>
 
@@ -117,19 +119,19 @@
 
         <!-- contact me with fake # & email -->
         <main>
-            <h2>contact me</h2>
+            <h2 class="contact">contact me</h2>
 
             <address>
-            P: <a href="tel:123.456.7890">123.456.7890</a> <br/>
-            E: <a href="mailto://fakemail@gmail.com">fakemail@gmail.com</a> <br/>
-            linkin: <a href="https://www.linkedin.com/in/brenda-rodriguez-2b9a87243/">Brenda Rodriguez linkin</a>
+            P: <a class="phone" href="tel:123.456.7890">123.456.7890</a> <br/>
+            E: <a class="email" href="mailto://fakemail@gmail.com">fakemail@gmail.com</a> <br/>
+            linkin: <a class="link" href="https://www.linkedin.com/in/brenda-rodriguez-2b9a87243/">Brenda Rodriguez linkin</a>
              </address>
 
         </main>
 
         <!-- resume -->
-        <main>
-            <h2>resume</h2>
+        <main class="rest">
+            <h2 class="resume">resume</h2>
 
             <ul>
                 <li><strong>education-</strong> Associate Degree in Nursing, Baptist School of Health, San Antonio, Texas, 2018.
@@ -140,11 +142,11 @@
 
                     <ul>
 
-                        <li>Infusion nurse at The START Center for Cancer Care. From July 2022 to present. </li>
+                        <li>Infusion nurse at The START Center for Cancer Care. From July 2022 to present. </li> <br/>
 
-                        <li>Travel nurse on a 13 week contract at South Austin St. David's medical center, Austin, Texas. From February 2022 to July 2022.</li>
+                        <li>Travel nurse on a 13 week contract at South Austin St. David's medical center, Austin, Texas. From February 2022 to July 2022.</li> <br/>
 
-                        <li>Travel nurse on a 1 1/2 year contract at John Hopkins Bayview medical center, Baltimore, Maryland. From September 2020 to November 2021.</li>
+                        <li>Travel nurse on a 1 1/2 year contract at John Hopkins Bayview medical center, Baltimore, Maryland. From September 2020 to November 2021.</li> <br/>
 
                         <li>Staff registered nurse at Methodist Hospital, San Antonio, Texas. From October 2018 to August 2020.</li>
 
@@ -156,19 +158,5 @@
 
         </main>
 
-
-
-
-
-
-
-
-
-
-
-
-    </header>
-
-    
 </body>
 </html>
