--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
+
     <!-- header -->
     <header class="header">
         <h1>Brenda Rodriguez
 
             <img src="./assests/images/itme.JPG" alt="selfie of myself" 
-                width="150"
-                height="250" />
+                width="100"
+                height="150" />
             
         </h1>
 
@@ -59,59 +60,51 @@
 
             <h2 class="work">work</h2>
 
-            <section>
+            <section class="run">
 
                 <h3>run buddy</h3>
 
-                <img src="./assests/images/runbuddy.jpeg" alt="screenshot of run buddy"
-                    width="100"
-                    height="150" />
+                <img class="runpic" src="./assests/images/runbuddy.jpeg" alt="screenshot of run buddy" />
 
             </section>
 
-            <section>
+            <section class="horiseon" >
 
                 <h3>horiseon</h3>
 
-                <img src="./assests/images/challenege 1 finish product.png" alt="horiseon product application"
-                    width="100"
-                    height="150" />
+                <img  class="hs" src="./assests/images/challenege 1 finish product.png" alt="horiseon product application" />
 
             </section>
 
-            <section>
+            <section class="c1">
 
                 <h3>coming soon 1</h3>
 
-                <img src="./assests/images/dogburger.jpeg" alt="dog on top a burger"
-                    width="100" />
+                <img class="burger" src="./assests/images/dogburger.jpeg" alt="dog on top a burger" />
 
             </section>
 
-            <section>
+            <section class="c2">
 
                 <h3>coming soon 2</h3>
 
-                <img src="./assests/images/dogskates.jpeg" alt="dog in skates"
-                width="100" />
+                <img class="skates" src="./assests/images/dogskates.jpeg" alt="dog in skates" />
 
             </section>
 
-            <section>
+            <section class="c3">
 
                 <h3>coming soon 3</h3>
 
-                <img src="./assests/images/heyboo.jpeg" alt="dog saying hey boo"
-                    width="100" />
+                <img class="boo" src="./assests/images/heyboo.jpeg" alt="dog saying hey boo" />
 
             </section>
 
-            <section>
+            <section class="c4">
                 
                 <h3>coming soon 4</h3>
 
-                <img src="./assests/images/sweatydog.jpeg" alt="dog working out"
-                    width="100" />
+                <img class="sweat" src="./assests/images/sweatydog.jpeg" alt="dog working out" />
 
             </section>
 
@@ -121,7 +114,7 @@
         <main>
             <h2 class="contact">contact me</h2>
 
-            <address>
+            <address class="address" >
             P: <a class="phone" href="tel:123.456.7890">123.456.7890</a> <br/>
             E: <a class="email" href="mailto://fakemail@gmail.com">fakemail@gmail.com</a> <br/>
             linkin: <a class="link" href="https://www.linkedin.com/in/brenda-rodriguez-2b9a87243/">Brenda Rodriguez linkin</a>
