--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
                 <h3>run buddy</h3>
 
               <a href="https://brenbrenda55.github.io/run-buddy/" target="_live">
-                <img class="runpic" src="./assests/images/runbuddy.jpeg" alt="screenshot of run buddy" />
+                <img class="runpic" src="./assests/images/runbuddy.png" alt="screenshot of run buddy" />
               </a>
             </section>
-
+            
+            
             <section class="horiseon" >
 
                 <h3>horiseon</h3>
 
               <a href="https://brenbrenda55.github.io/the-man/" target="_live" >
-                <img  class="hs" src="./assests/images/challenege 1 finish product.png" alt="horiseon product application" />
+                <img  class="hs" src="./assests/images/horiseon.png" alt="horiseon product application" />
               </a>
 
             </section>
@@ -87,6 +88,7 @@
                </a>
 
             </section>
+            </div>
 
             <section class="c2">
 
