--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               </a>
             </section>
             
-            
+            <div class="columncontainer">
+              <div class="column1">
             <section class="horiseon" >
 
                 <h3>horiseon</h3>
@@ -88,8 +89,9 @@
                </a>
 
             </section>
-            </div>
+               </div>
 
+            <div class="column2">
             <section class="c2">
 
                 <h3>coming soon 2</h3>
@@ -119,6 +121,9 @@
               </a>  
 
             </section>
+
+            </div>
+            </div>
 
         </main>
 
