--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
             <section class="c1">
 
-                <h3>coming soon 1</h3>
+                <h3>Onit</h3>
               
-              <a href="https://youtu.be/gE1JNq2XP2U" target="_blank">
-                <img class="burger" src="./assests/images/dogburger.jpeg" alt="dog on top a burger" />
+              <a href="https://brenbrenda55.github.io/onit/index.html" target="_blank">
+                <img class="burger" src=".//assests/images/home.png" alt="music group project" />
                </a>
 
             </section>
