--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 <h3>coming soon 2</h3>
 
-              <a href="https://youtu.be/m5_6mhsxJ6Y" target="_blank" >
+              <a href="https://protected-taiga-76694.herokuapp.com/" target="_blank" >
                 <img class="skates" src="./assests/images/dogskates.jpeg" alt="dog in skates" />
               </a>
 
